Now, able to pass image frames to front end. Front end is able to decode it and add an image object. But all frames are not shown